Added other fields in view Added Person class Added output formatting in Presenter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,25 +8,27 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="123dp"
+        android:layout_height="@dimen/textheight"
+        android:gravity="start|center_vertical"
         android:text="@string/textView1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.095"
+        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.067" />
+        app:layout_constraintVertical_bias="0.049" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="125dp"
-        android:layout_height="54dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
+        android:gravity="start|center_vertical"
         android:inputType="number"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/button"
@@ -40,27 +42,109 @@
         android:layout_marginRight="16dp"
         android:onClick="fetchButtonClicked"
         android:text="@string/button1"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="22dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/nameTextView"
         android:layout_width="140dp"
-        android:layout_height="24dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        android:layout_height="@dimen/textheight"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="44dp"
+        android:gravity="start|center_vertical"
+        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nameLabel" />
 
     <TextView
         android:id="@+id/massTextView"
         android:layout_width="140dp"
-        android:layout_height="24dp"
+        android:layout_height="@dimen/textheight"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="44dp"
+        android:gravity="start|center_vertical"
+        app:layout_constraintBaseline_toBaselineOf="@+id/massLabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/massLabel" />
+
+    <TextView
+        android:id="@+id/createdAtTextView"
+        android:layout_width="140dp"
+        android:layout_height="@dimen/textheight"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="44dp"
+        android:gravity="start|center_vertical"
+        app:layout_constraintBaseline_toBaselineOf="@+id/createdAtLabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/createdAtLabel" />
+
+    <TextView
+        android:id="@+id/heightTextView"
+        android:layout_width="138dp"
+        android:layout_height="@dimen/textheight"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="44dp"
+        android:gravity="start|center_vertical"
+        app:layout_constraintBaseline_toBaselineOf="@+id/heightLabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/heightLabel" />
+
+    <TextView
+        android:id="@+id/nameLabel"
+        android:layout_width="93dp"
+        android:layout_height="@dimen/textheight"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="@+id/nameTextView"
-        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
+        android:layout_marginTop="56dp"
+        android:ems="10"
+        android:gravity="start|center_vertical"
+        android:text="@string/nameLabelText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/massLabel"
+        android:layout_width="92dp"
+        android:layout_height="@dimen/textheight"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:gravity="start|center_vertical"
+        android:text="@string/massLabelText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/heightLabel" />
+
+    <TextView
+        android:id="@+id/createdAtLabel"
+        android:layout_width="92dp"
+        android:layout_height="@dimen/textheight"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:gravity="start|center_vertical"
+        android:text="@string/createdAtLabelText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/massLabel" />
+
+    <TextView
+        android:id="@+id/heightLabel"
+        android:layout_width="93dp"
+        android:layout_height="@dimen/textheight"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:gravity="start|center_vertical"
+        android:text="@string/heightLabelText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />
 
 </android.support.constraint.ConstraintLayout>
